 :encoding=UTF-8:maxLineLen=95:wrap=hard:folding=indent:collapseFolds=2:
 jEdit SideKick Plugin Changelog
 
    Version 1.7
        Fixed bug 1800, removed extraneous remove-marker menu item from tree popup menu.
        (Dale Anson)

    Version 1.6 requires Java 1.6, jEdit 5.0, ErrorList 2.1, MarkerSets 0.8 (optional)
        Better calculation of asset ranges which helps with sidekick folding mode.
        
    Version 1.5 requires Java 1.6, jEdit 5.0, ErrorList 2.0, MarkerSets 0.8 (optional)
        Fixed NPE in handlePluginUpdate for plugins that do not have a pluginJAR. (kpouer) 
        German Localization (rschwenn)

    Version 1.4 requires Java 1.6, jEdit 5.0pre1, ErrorList 2.0 and MarkerSets 0.8(optional)
        Fixed #2311948, auto-displayed ErrorList kills CompletionPopup (Jarek Czekalski)
        Fixed #3536025, Sidekick displays same errors in all views (XML plugin) (Alan Ezust)
        Fixed #3480846, Sidekick doesn't remember my parser (Jarek Czekalski)
        
    Version 1.3 Requires Java 1.6, jEdit 4.5, ErrorList 1.9, and
        MarkerSets 0.8 (Optional)
        Sidekick unable to clear checkbox tree/combo follows caret (#3445893 -
        Shlomy)
        Integration with Markersets (#3392131 - shlomy).
        Default Focus on Tree, not filter field. (#3405334 - ezust).
        Fixed sidekick unload problem (Matthieu Casanova)
        Fixed memory leak (Matthieu Casanova)
        Allow Look and Feel changes at runtime.
        Fix completion popup regarding macro recorder (3175336 - Eric Le Lay).
    Version 1.1
        Added options for showing the structure of the buffer in a toolbar
        (using combo-boxes), for cases where the tree takes too much screen
        space.
    Version 1.0
        New macros / actions: search asset for selection and go to begin/end of
        function.
        Added a "macros/" dir where additional bsh macros can be placed.
        Fixes for 'go to next' and 'go to previous' asset, which also fixes